# livemakers-site

./: .gitignore  DEPLOY.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/pivots/: README.md  RUNBOOK.md  pyproject.toml
scripts/pivots/ops/: alert.py  install_launchagent.sh  lock.py  retain.py  run_daily.py  smoke_checklist.md  uninstall_launchagent.sh
scripts/pivots/ops/samples/: com.sition.livemakers.pivots.daily.plist  crontab.example
scripts/pivots/producer/: atomic_write.py  backtest.py  backtest_quality.py  compose_assets.py  compose_backtest.py  derivatives_sidecar.py  evidence.py  fetch_binance.py  indicators.py  percentiles.py  run_producer.py  score_confidence.py  score_derivatives_evidence.py  score_direction_bias.py  score_price_pivot.py  score_volatility_pivot.py  types.py
scripts/pivots/tests/: conftest.py  test_alert.py  test_alert_telegram.py  test_atomic_write.py  test_autocommit_integration.py  test_backtest.py  test_backtest_quality.py  test_compose_assets.py  test_compose_backtest.py  test_derivatives_sidecar.py  test_fetch_binance.py  test_indicators.py  test_percentiles.py  test_retain.py  test_run_daily.py  test_run_daily_autocommit.py  test_run_daily_lock.py  test_run_producer.py  test_score_confidence.py  test_score_derivatives_evidence.py  test_score_direction_bias.py  test_score_price_pivot.py  test_score_volatility_pivot.py  test_types.py
scripts/pivots/tests/fixtures/binance/: btcusdt_funding_1000.json  btcusdt_klines_1d_1500.json  btcusdt_oi_4h_180.json  ethusdt_oi_4h_180.json  (+2 more)
(+843 files in other folders)
